WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214123
After a scroll gesture, content changes don't trigger re-snapping with scroll snap
https://bugs.webkit.org/show_bug.cgi?id=214123
Summary
After a scroll gesture, content changes don't trigger re-snapping with scroll...
Simon Fraser (smfr)
Reported
2020-07-08 22:32:51 PDT
After a scroll gesture, content changes don't trigger re-snapping with scroll snap
Attachments
Patch
(21.64 KB, patch)
2020-07-08 22:39 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(28.79 KB, patch)
2020-07-09 10:01 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(21.00 KB, patch)
2020-07-09 10:10 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-07-08 22:39:07 PDT
Created
attachment 403845
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2020-07-08 22:39:38 PDT
<
rdar://problem/65257228
>
Simon Fraser (smfr)
Comment 3
2020-07-09 10:01:11 PDT
Created
attachment 403882
[details]
Patch
Simon Fraser (smfr)
Comment 4
2020-07-09 10:10:20 PDT
Created
attachment 403884
[details]
Patch
EWS
Comment 5
2020-07-09 13:01:57 PDT
Committed
r264190
: <
https://trac.webkit.org/changeset/264190
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403884
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug